# pycard

./: README.md  gallery_template.html  pycard.py  pyproject.toml
.github/workflows/: .testing.yml
example/: cards.yaml  template.svg.jinja
